# platform-dependencies

./: .gitignore  pyproject.toml  requirements.in  requirements.txt
10/: divide.py  git.txt
111/: git.txt  ipinfo.py
113/: git.txt  non_ascii.py  solution.py
114/: color.py  git.txt  solution.py
116/: files.py  git.txt
118/: duplicates.py  git.txt
119/: git.txt  xmas.py
12/: git.txt  validate.py  validate_pb.py
120/: git.txt  validate.py
122/: anagram.py  git.txt
123/: friends.py  git.txt
125/: git.txt  tribe.py
127/: git.txt  ordinal.py
129/: git.txt  stocks.py
13/: dict_convert.py  git.txt
132/: git.txt  vowels.py
135/: books.py  git.txt
137/: git.txt  gourmet.py
138/: git.txt  zoo.py
14/: git.txt  table.py
140/: git.txt  medals.py
141/: git.txt  primitive_date_inferrer.py
142/: git.txt  scores.py
144/: git.txt  months.py
146/: git.txt  rhombus.py
147/: git.txt  hundred_days.py
148/: git.txt  grouping.py
150/: git.txt  jsonify.py
151/: git.txt  operas.py
154/: git.txt
155/: git.txt  split.py
156/: git.txt  rrhood.py
157/: accents.py  git.txt
159/: calculator.py  git.txt
162/: fill.py  git.txt
163/: git.txt  reqs.py
165/: git.txt  passwd.py
166/: git.txt  ini.py
167/: git.txt  user.py
169/: convert.py  git.txt
17/: friends.py  git.txt
171/: README.md  animation.py  git.txt
172/: curry.py  git.txt
173/: git.txt  timer.py
175/: git.txt  missing_dates.py
178/: commits.py  git.txt
18/: git.txt  harry.py
181/: git.txt
182/: git.txt  quotes.py
184/: git.txt  stats.py
185/: git.txt  (+1 more)
(+282 files in other folders)
